SUMI ChangeLog 
$Id$
vi: noexpandtab:

2005-09-06 Jeff Connelly <jeffconnelly@users.sourceforge.net>
	* Added doc/wdoc.py to extract articles from SUMIWiki, pipe to wt2db

2005-09-05 Jeff Connelly <jeffconnelly@users.sourceforge.net> - 0.8.13a
	* Added a few doctests
	* SUMI is listed on Slyck.com!
	* This is a source-only release; there are only minor changes from
	  the 0.8.13 binary Win32 release. 

2005-09-01 Jeff Connelly <jeffconnelly@users.sourcforge.net> - 0.8.13

2005-08-31 Jeff Connelly <jeffconnelly@users.sourceforge.net>
	* Drag-and-drop support in GUI (try dropping a .sumi file into it)
	* Allow modirclib to be used with crypt_req
	* Rename config.py to config.txt

2005-08-29 Jeff Connelly <jeffconnelly@users.sourceforge.net>
	* Add support for passing a .sumi filename to sumigetw
	* New .sumi file format
	* GUI "Resume" works on multiple transfers at once
	* Installer compressed with LZMA solid
		Default compresion: 4493015, vs. LZMA solid: 3330921
	  Without WinPcap, it is the smallest sumiinst of the 0.8 series
	* WinPcap 3.1 is now bundled with the installer
	* Installer sets up file associations

2005-08-25 Jeff Connelly <jeffconnelly@users.sourceforge.net>
	* Fix abort, add GUI option to resume, and 'startfile' option
	
2005-08-22 Jeff Connelly <jeffconnelly@users.sourceforge.net>
	* sumigetw uses wxPython 2.6.1.0 and new-style symbol names, no more 2.4
	* Client configures MTU instead of MSS, make MSS not include header
	* Fix sumigetw crash after 30,000 characters were logged, add log files

2005-08-21 Jeff Connelly <jeffconnelly@users.sourceforge.net> - 0.8.12
	* New transport: modtor, uses The Onion Router (see http://tor.eff.org)
	* File data encryption fully works, enabled by default (crypt_req not)
	* Many minor bugfixes, removed modpipe, use shorter variable names ('u')

2005-08-11 Jeff Connelly <jeffconnelly@users.sourceforge.net>
	* Partially autoconfigure IP, MSS, src_allow, and interface if