@@ -44,7 +44,7 @@
                   '64.56.182.52'),
  'interface': 'fxp0',
  'irc_chans': {'#sumi': 'anon'},
- 'irc_nick': 'sumi-00',
+ 'irc_nick': 'sumi-01',
  'irc_port': 6667,
  'irc_server': 'irc.xtc-dreams.com',
  'lose': False,
